--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
             - sail
         depends_on:
             - mariadb
-            - mailpit
+            - redis
     mariadb:
         image: 'mariadb:10'
         ports:
@@ -49,25 +49,35 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-    mailpit:
-        image: 'axllent/mailpit:latest'
-        ports:
-            - '${FORWARD_MAILPIT_PORT:-1025}:1025'
-            - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
-        networks:
-            - sail
     adminer:
         image: adminer
         environment:
-            ADMINER_DEFAULT_SERVER: 'mariadb'
+            ADMINER_DEFAULT_SERVER: mariadb
             ADMINER_DEFAULT_DB_NAME: '${DB_DATABASE}'
         ports:
-            - 8080:8080
+            - '8080:8080'
         networks:
             - sail
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - redis-cli
+                - ping
+            retries: 3
+            timeout: 5s
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mariadb:
+        driver: local
+    sail-redis:
         driver: local
